--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-  "name" : "tinson/formatter",
-  "description" : "api formatter",
-  "require" : {
-    "php" : ">=5.6"
+  "name": "tinson/formatter",
+  "description": "api formatter",
+  "require": {
+    "php": ">=5.6"
   },
-  "autoload" : {
-    "psr-4" : {"ApiFormatter\\" : "src/"}
+  "require-dev": {
+    "phpunit/phpunit": "^7.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "ApiFormatter\\": "src/"
+    }
   }
 }
